--- a/python_files/template1.tex
+++ b/python_files/template1.tex
@@ -4,6 +4,6 @@
 \usetikzlibrary{through,calc,matrix,shapes}
 \begin{document}
 \begin{my}
-$\text{Keep it } \mathbb{R}$
+$hello$
 \end{my}
 \end{document}
