Fixed issues with Latex bot

--- a/python_files/template1.tex
+++ b/python_files/template1.tex
@@ -4,6 +4,6 @@
 \usetikzlibrary{through,calc,matrix,shapes}
 \begin{document}
 \begin{my}
-Keep it $\mathbb{R}$
+$ \frac{\text{Vatsal}}{\text{eats ass}} $
 \end{my}
 \end{document}
