--- a/python_files/template1.tex
+++ b/python_files/template1.tex
@@ -4,6 +4,6 @@
 \usetikzlibrary{through,calc,matrix,shapes}
 \begin{document}
 \begin{my}
-$ \frac{\text{Vatsal}}{\text{eats ass}} $
+$\frac{\text{my analysis homework}}{\text{is hard}}$
 \end{my}
 \end{document}
